--- a/www/localhost/start.hbs
+++ b/www/localhost/start.hbs
@@ -164,7 +164,7 @@
 <p>
     localization:
 </p>
-             <pre class="code">{{~syntaxHighlight localization~}}</pre>
+             <pre class="code">{{~syntaxHighlight locale~}}</pre>
         </div>
 
         <div class="code-box">
