--- a/www/localhost/start.hbs
+++ b/www/localhost/start.hbs
@@ -31,6 +31,7 @@
             background-image: url('assets/bg.jpg');
             background-size: cover;
             background-repeat: no-repeat;
+            background-attachment: fixed;
 
         }
 
@@ -160,6 +161,10 @@
 
             <p>model extended from start.hbs.json and returned model by start.hbs.js main async function</p>
             <pre class="code">{{~syntaxHighlight model~}}</pre>
+<p>
+    localization:
+</p>
+             <pre class="code">{{~syntaxHighlight localization~}}</pre>
         </div>
 
         <div class="code-box">
